Added htmx configuration

--- a/src/main/resources/templates/BasePage/home.html
+++ b/src/main/resources/templates/BasePage/home.html
@@ -20,6 +20,9 @@
   <script defer src="https://unpkg.com/htmx.org@1.8.5"
     integrity="sha384-7aHh9lqPYGYZ7sTHvzP1t3BAfLhYSTy9ArHdP3Xsr9/3TlGurYgcPBoFmXX2TX/w"
     crossorigin="anonymous"></script>
+
+  <meta name="htmx-config" content='{"historyEnabled":"false"}'>
+
   <script defer src="https://cdn.jsdelivr.net/npm/js-cookie@3.0.1/dist/js.cookie.min.js"></script>
 
   <title>{#insert title}Shop-UI{/}</title>
