Added edit mode for todo

--- a/src/main/resources/templates/BasePage/error_404.html
+++ b/src/main/resources/templates/BasePage/error_404.html
@@ -1,6 +1,6 @@
 <div class="Box">
   <div class="blankslate blankslate-large blankslate-spacious">
     <h3 class="blankslate-heading">404 - Content not found</h3>
-    <p>Relly no content!</p>
+    <p>Page {path} not found!</p>
   </div>
 </div>
