--- a/src/main/resources/templates/TodosPage/todos.html
+++ b/src/main/resources/templates/TodosPage/todos.html
@@ -29,7 +29,7 @@
 										hx-target="#element-{id}"
 										hx-swap="outerHTML">
 									{/if}
-									<input name="id" id="id" type="text" value="{id}"  />
+									<input name="id" id="id" type="text" value="{id}" hidden />
 									<div class="form-group">
 										<label for="summary">Summary</label>
 										<input type="text" class="form-control" name="summary" id="summary" placeholder="Summary" value="{todo.summary or ''}">
